--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,12 @@
 h1 {
   margin-top: 10px;
   color: #142d4c;
-  font-size: 60px;
+  font-size: 40px;
 }
 
 h2 {
   color: #385170;
-  font-size: 18px;
+  font-size: 15px;
 }
 
 h3 {
@@ -15,7 +15,8 @@ h3 {
 }
 
 h4 {
-  font-size: 80px;
+  margin-top: 20px;
+  font-size: 100px;
   color: #ffc93c;
 }
 
@@ -43,8 +44,8 @@ body {
   border-color: #9fd3c7;
 }
 
-#border {
-  max-width: 725px;
+#wrapper {
+  max-width: 600px;
   max-height: 700px;
   background-color: white;
   padding: 40px;
@@ -53,7 +54,6 @@ body {
 }
 
 #main-body {
- 
   text-align: center;
   font-family: "Quicksand", sans-serif;
 }
